--- a/frontend/src/component/Navigation/ManiNavigation.css
+++ b/frontend/src/component/Navigation/ManiNavigation.css
@@ -1,38 +1,59 @@
-.main-navigation{
+.main-navigation {
     position: fixed;
     left: 0;
     top: 0;
     width: 100%;
     height: 3.5rem;
-    background: #01d1d1;
-    padding:  0 3rem;
+    background: #5101d1;
+    color: white;
+    padding: 0 1rem;
     display: flex;
     align-items: center;
-}
- .main-navigation__logo h1{
-     margin: 0;
-     font-size: 1.5rem;
- }
+    justify-content: space-between;
+    box-sizing: border-box;
+  }
+  
+  .main-navigation__logo h1 {
+    margin: 0;
+    font-size: 1.5rem;
+  }
+  
+  .main-navigation__item {
+    margin-left: 1.5rem;
+  }
+  
+  .main-navigation__item ul {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    align-items: center;
+  }
+  
+  .main-navigation__item li {
+    margin: 0 1rem;
+  }
+  
+  .main-navigation__item a,
+  .main-navigation__item button
+  {
+    text-decoration: none;
+    color:white;
+    border:none;
+    font: inherit;
+    background: transparent;
+    cursor: pointer;
+    vertical-align: middle;
+    margin : 0;
+  }
+  
+  .main-navigation__item a:hover,
+  .main-navigation__item a:active,
+  .main-navigation__item button:active, 
+  .main-navigation__item button:hover{
+    background : rgb(247, 243, 11);
+    color:  #5101d1;
+    padding: 1rem;
+    border-radius:5px;
 
- .main-navigation__item{
-    margin-left: 4.5rem;
- }
- .main-navigation__item ul{
-     display: flex;
-     list-style: none;
-     margin: 0;
-     padding: 0;
- }
- .main-navigation__item li{
-     margin: 0 1rem;
- }
- .main-navigation__item a{
-     text-decoration: none;
-     color: rgb(255, 255, 255);
- }
- .main-navigation__item a:hover,
- .main-navigation__item a:active,
- .main-navigation__item a.active
- {
-     color:yellow;
- }
+  }
