--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,9 @@ body {
 }
 
 .form-control label,
-.form-control input{
+.form-control input,
+.form-control textarea
+{
     display: block;
     width: 100%;
 }
@@ -24,7 +26,7 @@ body {
     border-radius: 5px;
     padding: 0.5rem 0.75rem;
     margin-right: 1rem;
-    box-shadow: 1px 1px 5px rgba(0,0,0, 0.26);
+    box-shadow: 2px 2px 5px rgba(0,0,0, 0.26);
     color:white;
 }
 .form-action button:hover,
