--- a/frontend/src/pages/Events.css
+++ b/frontend/src/pages/Events.css
@@ -6,3 +6,17 @@
     width: 30rem;
     max-width: 80%;
 }
+.events_list
+{
+    width: 40rem;
+    max-width: 90%;
+    margin: 2rem auto;
+    list-style: none;
+    padding: 0;
+}
+.events_list__item
+{
+    margin: 1rem 0;
+    padding: 1rem;
+    border: 2px solid #5101d1;
+}
